--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "@astrojs/solid-js": "^0.1.2",
     "astro": "^1.0.0-beta.20",
-    "solid-js": "^1.3.14",
+    "solid-js": "^1.3.14"
   },
   "dependencies": {
     "@astrojs/netlify": "^0.3.3"
